# skill-composer-mcp

./: .env.example  .gitignore  README.md  opencode.json  pyproject.toml
composed_skills/xiaohongshu-skill+xiaohongshu-ops_20260708_143457/: SKILL.md  composition_meta.json
examples/: config.yaml.example
examples/skills/research-skill/: SKILL.md
examples/skills/writer-skill/: SKILL.md
examples/skills/xiaohongshu-skill/: SKILL.md
skills/weather-openweather/: SKILL.md
skills/weather-wttr/: SKILL.md
src/skill_composer_mcp/: __init__.py  __main__.py  config.py  models.py  server.py
src/skill_composer_mcp/core/: __init__.py  llm_factory.py  pattern_library.py  security_guard.py  skill_analyzer.py  skill_composer.py  skill_loader.py  skill_parser.py  template_manager.py
src/skill_composer_mcp/utils/: __init__.py  fuzzy_matcher.py
tests/: test_security_guard.py  test_skill_analyzer.py  test_skill_composer.py  test_skill_loader.py  test_skill_parser.py  test_template_manager.py
