[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-composer-mcp"
version = "2.0.0"
description = "本地MCP技能组合器 - 基于MCP协议的AI技能动态组合工具"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Skill Composer Team" },
]
keywords = ["mcp", "skill", "composer", "ai", "claude", "cursor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "mistune>=3.0.0",
    "python-frontmatter>=1.0.0",
    "loguru>=0.7.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
fuzzy = [
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.25.0",
]
ollama = [
    "ollama>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
skill-composer-mcp = "skill_composer_mcp.server:main"

[project.urls]
Homepage = "https://github.com/K-Host/skill-composer-mcp"
Repository = "https://github.com/K-Host/skill-composer-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/skill_composer_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
